# Food-Stat

./: .gitignore  README.md
client/: package-lock.json  package.json
client/app/: layout.tsx  page.tsx  type.ts
client/app/[category]/: page.tsx
client/app/auth/: loginPage.tsx
client/app/categories/: categories.html  categories2.html
client/app/components/: food_card.tsx  food_category_card.tsx  form_upload  form_upload.tsx  navbar.tsx  upload.tsx
client/app/contact/: page.tsx
client/app/home/: page.tsx  page_proto.html
client/app/items/: page.tsx
client/app/lib/: api.ts  mock_data.ts  type.ts
client/app/scan/: page.tsx
data/: connection.txt  food-stat.food_items.json  local.Milk Flavouring.json  local.accounts.json  local.startup_log.json  test.json
data/Categories/: food-stat.categories.json
data/GenAIData/: Data.json  Data_with_barcodes.json  ModelPaused.json  image_url.json
data/Individual/: local.Bread.json  local.Breakfast Spreads.json  local.Corn Flakes.json  local.Instant Noodles.json
data/Ingredients/: ingredients_deepseek.csv
docs/: BMC PPT FOOD-STAT.pptx  BMC for Food-Stat.docx
server/: CleanedDataForModel.csv  CleanedDataForModel.csv:Zone.Identifier  Untitled.ipynb  Untitled.ipynb:Zone.Identifier  app.py  database.py  html.snippets  models.py  pyproject.toml  requirements.txt  routes.py  ruleBased.py  voting_ensemble_model.pkl
server/Barcode/: analyze_barcodes.py  barcode_utils.py  find_barcode.py  scan_barcode.py
server/ML_APIS/: PredictNutritionalRating.py  RuleBasedRecommendation.py  conda_req.txt  personalizer.py  pipeline.joblib  pipeline.pkl  setup.py  voting_ensemble_model.pkl
server/ML_APIS/Gemini_API/: auth.py  fetch_ratings.py
server/ML_APIS/ocr_model_setup/: init_ocr.py
server/ML_APIS/ocr_model_setup.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
server/Notebooks/: Add-Nutritional-Scores via GEMINI.ipynb  Allergy_info.ipynb  Barcode Additions.ipynb  Data-Curation.ipynb  ModelPaused.json
server/Notebooks/.ipynb_checkpoints/: Add-Nutritional-Scores via GEMINI-checkpoint.ipynb  Barcode Additions-checkpoint.ipynb  Data-Curation-checkpoint.ipynb
server/contactUs/: Contact_Us.html
server/food_items/: individual_item.html  todo
server/login_page/: login.html  signup.html
server/myenv/: pyvenv.cfg
server/myenv/Scripts/: activate  activate.bat
server/templates/: about_us.jinja  base.jinja  category.jinja  contact_us.jinja  doc_consul.jinja  food_item.jinja  form.jinja  home.jinja  login.jinja  modal.jinja  profile.jinja  scan.jinja  signup.jinja
server/user_page/: user_profile.html
(+10 files in other folders)
