[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "blinker==1.9.0",
    "bson>=0.5.10",
    "click==8.1.8",
    "colorama==0.4.6",
    "dnspython==2.7.0",
    "dotenv==0.9.9",
    "flask==3.1.0",
    "flask-cors==5.0.1",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "joblib==1.4.2",
    "markupsafe==3.0.2",
    "numpy==2.1.2",
    "pandas==2.2.3",
    "pymongo==4.11.3",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "pytz==2024.2",
    "scikit-learn==1.5.2",
    "scipy==1.14.1",
    "six==1.16.0",
    "threadpoolctl==3.5.0",
    "tzdata==2024.2",
    "werkzeug==3.1.3",
]
